@@ -47,7 +47,9 @@
                     { "name": "google-linux-2", "platform": "chromium-linux" },
                     { "name": "google-new-tests", "platform": "mac-leopard" },
 
-                    { "name": "wincairo-1", "platform": "wincairo" }
+                    { "name": "wincairo-1", "platform": "wincairo" },
+                    
+                    { "name": "efl-linux-slave-1", "platform": "efl" }
                   ],
 
     "builders":   [ { "name": "Leopard Intel Release (Build)", "type": "Build", "builddir": "leopard-intel-release",
@@ -201,6 +203,11 @@
                       "name": "WinCairo Debug (Build)", "type": "Build", "builddir": "win-cairo-debug",
                       "platform": "wincairo", "configuration": "debug", "architectures": ["i386"],
                       "slavenames": ["wincairo-1"]
+                    },
+                    {
+                      "name": "EFL Linux Release (Build)", "type": "Build", "builddir": "efl-linux-release",
+                      "platform": "efl", "configuration": "release", "architectures": ["i386"],
+                      "slavenames": ["efl-linux-slave-1"]
                     }
                   ],
 
@@ -213,7 +220,7 @@
                                        "Qt Windows 32-bit Release", "Qt Windows 32-bit Debug",
                                        "Chromium Win Release", "Chromium Mac Release", "Chromium Linux Release",
                                        "Chromium Win Release (Tests)", "Chromium Mac Release (Tests)", "Chromium Linux Release (Tests)",
-                                       "WinCairo Debug (Build)"]
+                                       "WinCairo Debug (Build)", "EFL Linux Release (Build)"]
                     },
                     { "type": "Triggerable", "name": "leopard-intel-release-tests",
                       "builderNames": ["Leopard Intel Release (Tests)"]
